syntax = "proto3";
package zopp;

service ZoppService {
  // Auth
  rpc Join(JoinRequest) returns (JoinResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);

  // Workspaces
  rpc CreateWorkspace(CreateWorkspaceRequest) returns (Workspace);
  rpc ListWorkspaces(Empty) returns (WorkspaceList);
  rpc GetWorkspaceKeys(GetWorkspaceKeysRequest) returns (WorkspaceKeys);

  // Invites
  rpc CreateInvite(CreateInviteRequest) returns (InviteToken);
  rpc GetInvite(GetInviteRequest) returns (InviteToken);  // Unauthenticated - for joining
  rpc ListInvites(Empty) returns (InviteList);
  rpc RevokeInvite(RevokeInviteRequest) returns (Empty);

  // Principals
  rpc GetPrincipal(GetPrincipalRequest) returns (Principal);
  rpc RenamePrincipal(RenamePrincipalRequest) returns (Empty);
  rpc ListPrincipals(Empty) returns (PrincipalList);

  // Projects
  rpc CreateProject(CreateProjectRequest) returns (Project);
  rpc ListProjects(ListProjectsRequest) returns (ProjectList);
  rpc GetProject(GetProjectRequest) returns (Project);
  rpc DeleteProject(DeleteProjectRequest) returns (Empty);

  // Environments
  rpc CreateEnvironment(CreateEnvironmentRequest) returns (Environment);
  rpc ListEnvironments(ListEnvironmentsRequest) returns (EnvironmentList);
  rpc GetEnvironment(GetEnvironmentRequest) returns (Environment);
  rpc DeleteEnvironment(DeleteEnvironmentRequest) returns (Empty);

  // Secrets
  rpc UpsertSecret(UpsertSecretRequest) returns (Empty);
  rpc GetSecret(GetSecretRequest) returns (Secret);
  rpc ListSecrets(ListSecretsRequest) returns (SecretList);
  rpc DeleteSecret(DeleteSecretRequest) returns (Empty);
}

message Empty {}

// Auth messages
message JoinRequest {
  string invite_token = 1;
  string email = 2;
  string principal_name = 3;
  bytes public_key = 4;              // Ed25519 for authentication
  bytes x25519_public_key = 5;       // X25519 for encryption (ECDH)
  bytes ephemeral_pub = 6;           // Ephemeral X25519 public key for wrapping KEK
  bytes kek_wrapped = 7;             // Workspace KEK wrapped for this principal
  bytes kek_nonce = 8;               // 24-byte nonce for wrapping
}

message JoinResponse {
  string user_id = 1;
  string principal_id = 2;
  repeated Workspace workspaces = 3;
}

message RegisterRequest {
  string email = 1;
  string principal_name = 2;
  bytes public_key = 3;              // Ed25519 for authentication
  bytes x25519_public_key = 4;       // X25519 for encryption (ECDH)
}

message RegisterResponse {
  string user_id = 1;
  string principal_id = 2;
}

message LoginRequest {
  string email = 1;
  string principal_name = 2;
  int64 timestamp = 3;
  bytes signature = 4;  // Sign(private_key, timestamp)
}

message LoginResponse {
  string user_id = 1;
  string principal_id = 2;
}

// Workspace messages
message CreateWorkspaceRequest {
  string id = 1;                     // Client-generated workspace ID (UUID v7)
  string name = 2;
  bytes ephemeral_pub = 3;           // Ephemeral X25519 public key for wrapping KEK
  bytes kek_wrapped = 4;             // Workspace KEK wrapped for creator
  bytes kek_nonce = 5;               // 24-byte nonce for wrapping
}

message Workspace {
  string id = 1;
  string name = 2;
}

message WorkspaceList {
  repeated Workspace workspaces = 1;
}

message GetWorkspaceKeysRequest {
  string workspace_name = 1;
}

message WorkspaceKeys {
  string workspace_id = 1;  // Workspace ID (for AAD)
  bytes ephemeral_pub = 2;  // Ephemeral X25519 public key for unwrapping
  bytes kek_wrapped = 3;    // Workspace KEK wrapped for requesting principal
  bytes kek_nonce = 4;      // 24-byte nonce for unwrapping
}

// Invite messages
message CreateInviteRequest {
  repeated string workspace_ids = 1;
  int64 expires_at = 2;
  string token = 3;                  // Hex-encoded SHA256 hash of invite secret (for lookup)
  bytes kek_encrypted = 4;           // Workspace KEK encrypted with invite secret
  bytes kek_nonce = 5;               // 24-byte nonce for KEK encryption
}

message InviteToken {
  string id = 1;
  string token = 2;                  // Hex-encoded SHA256 hash of invite secret (for lookup)
  repeated string workspace_ids = 3;
  int64 created_at = 4;
  int64 expires_at = 5;
  bytes kek_encrypted = 6;           // Workspace KEK encrypted with invite secret
  bytes kek_nonce = 7;               // 24-byte nonce for KEK encryption
  string invite_secret = 8;          // Secret to decrypt KEK (only returned on create, hex-encoded)
}

message GetInviteRequest {
  string token = 1;                  // Hex-encoded SHA256 hash of invite secret
}

message InviteList {
  repeated InviteToken invites = 1;
}

message RevokeInviteRequest {
  string token = 1;                  // Hex-encoded SHA256 hash of invite secret
}

// Principal messages
message GetPrincipalRequest {
  string principal_id = 1;
}

message Principal {
  string id = 1;
  string name = 2;
  bytes public_key = 3;              // Ed25519 for authentication
  bytes x25519_public_key = 4;       // X25519 for encryption (ECDH), optional
}

message RenamePrincipalRequest {
  string principal_id = 1;
  string new_name = 2;
}

message PrincipalList {
  repeated Principal principals = 1;
}

// Project messages
message CreateProjectRequest {
  string workspace_name = 1;
  string name = 2;
}

message ListProjectsRequest {
  string workspace_name = 1;
}

message GetProjectRequest {
  string workspace_name = 1;
  string project_name = 2;
}

message DeleteProjectRequest {
  string workspace_name = 1;
  string project_name = 2;
}

message Project {
  string id = 1;
  string workspace_id = 2;
  string name = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
}

message ProjectList {
  repeated Project projects = 1;
}

// Environment messages
message CreateEnvironmentRequest {
  string workspace_name = 1;
  string project_name = 2;
  string name = 3;
  bytes dek_wrapped = 4;
  bytes dek_nonce = 5;
}

message ListEnvironmentsRequest {
  string workspace_name = 1;
  string project_name = 2;
}

message GetEnvironmentRequest {
  string workspace_name = 1;
  string project_name = 2;
  string environment_name = 3;
}

message DeleteEnvironmentRequest {
  string workspace_name = 1;
  string project_name = 2;
  string environment_name = 3;
}

message Environment {
  string id = 1;
  string project_id = 2;
  string name = 3;
  bytes dek_wrapped = 4;
  bytes dek_nonce = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
}

message EnvironmentList {
  repeated Environment environments = 1;
}

// Secret messages
message UpsertSecretRequest {
  string workspace_name = 1;
  string project_name = 2;
  string environment_name = 3;
  string key = 4;
  bytes nonce = 5;
  bytes ciphertext = 6;
}

message GetSecretRequest {
  string workspace_name = 1;
  string project_name = 2;
  string environment_name = 3;
  string key = 4;
}

message DeleteSecretRequest {
  string workspace_name = 1;
  string project_name = 2;
  string environment_name = 3;
  string key = 4;
}

message ListSecretsRequest {
  string workspace_name = 1;
  string project_name = 2;
  string environment_name = 3;
}

message Secret {
  string key = 1;
  bytes nonce = 2;
  bytes ciphertext = 3;
}

message SecretList {
  repeated Secret secrets = 1;
}
